--- a/package.json
+++ b/package.json
@@ -17,18 +17,23 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^0.1.10",
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.19.3",
     "json-server": "^0.17.0",
     "nuxt": "^2.15.8",
+    "swiper": "^6.7.5",
     "vue": "^2.6.14",
+    "vue-agile": "^2.0.0",
+    "vue-card-carousel": "^1.0.0",
+    "vue-carousel-card": "^1.0.7",
     "vue-server-renderer": "^2.6.14",
+    "vue-slick-carousel": "^1.0.6",
     "vue-template-compiler": "^2.6.14",
-    "webpack": "^4.46.0",
-    "@fortawesome/free-brands-svg-icons": "^5.15.4",
-    "@fortawesome/free-regular-svg-icons": "^5.15.4",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4"
+    "webpack": "^4.46.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.3",
