--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/vue-fontawesome": "^0.1.10",
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.19.3",
+    "flush-promises": "^1.0.2",
     "json-server": "^0.17.0",
     "lodash": "^4.17.21",
     "nuxt": "^2.15.8",
